--- a/kadry/src/main/webapp/historia/index.xhtml
+++ b/kadry/src/main/webapp/historia/index.xhtml
@@ -35,7 +35,7 @@
                                     <p:menuitem icon="pi pi-money-bill" value="płace" style="width: 150px" action="Administrator"/>
                                     <p:menuitem icon="pi pi-file-pdf" value="PIT11" style="width: 150px" action="Pit"/>
                                     <p:menuitem icon="pi pi-file-excel" value="PIT4" style="width: 150px" action="Pit4"/>
-                                    <p:submenu icon="pi pi-print" label="wydruki" style="width: 150px"><p:menuitem icon="pi pi-ellipsis-v" value="zaświadczenia" style="width: 150px" action="wydruki"/><p:menuitem icon="pi pi-ellipsis-v" value="pfron" style="width: 150px" action="wskazniki"/></p:submenu>
+                                    <p:submenu icon="pi pi-print" label="wydruki" style="width: 150px"><p:menuitem icon="pi pi-ellipsis-v" value="zaświadczenia" style="width: 150px" action="wydruki"/><p:menuitem icon="pi pi-ellipsis-v" value="pfron/soka" style="width: 150px" action="wskazniki"/></p:submenu>
                                     <p:menuitem icon="pi pi-chart-bar" value="statystyka" style="width: 150px" action="Statystyka"/>
                                 </p:menubar>
                             </h:form>
