--- a/kadry/src/main/webapp/wskazniki/sub/wskazniki.xhtml
+++ b/kadry/src/main/webapp/wskazniki/sub/wskazniki.xhtml
@@ -14,6 +14,9 @@
                  <p:tab title="Stan zatrudnienia">
                     <ui:include src="pfron.xhtml"/>
                 </p:tab>
+                <p:tab title="SOKA">
+                    <ui:include src="soka.xhtml"/>
+                </p:tab>
             </p:tabView>
         </p:outputPanel>
     </p:panelGrid>
