--- a/kadry/src/main/webapp/pracownikdane/sub/pracownik_dane.xhtml
+++ b/kadry/src/main/webapp/pracownikdane/sub/pracownik_dane.xhtml
@@ -30,7 +30,10 @@
                         <p:outputLabel value="pesel" for="pesel" />
                         <p:inputText id="pesel" value="#{pracownikDane2View.selected.pesel}" title="imię" required="true" requiredMessage="Wpisz Pesel" maxlength="11"/>
                         <p:outputLabel value="data urodzenia" for="du" />
-                        <p:inputMask id="du" value="#{pracownikDane2View.selected.dataurodzenia}" mask="9999-99-99" title="data urodzenia" required="true" requiredMessage="Wpisz datę urodzenia"/>
+                        <p:inputMask id="du" value="#{pracownikDane2View.selected.dataurodzenia}" mask="9999-99-99" title="data urodzenia" required="true" 
+                                     requiredMessage="Wpisz datę urodzenia">
+                            <p:ajax event="change" onstart="ustawDateSprzedazy(#{wpisView.rokWpisu},#{wpisView.miesiacWpisu});" partialSubmit="true" global="false" />
+                        </p:inputMask>
                         <p:outputLabel value="miejsce urodzenia" for="mu" />
                         <p:inputText id="mu" value="#{pracownikDane2View.selected.miejsceurodzenia}" title="miejsce urodzenia" />
                         <p:outputLabel value="nierezydent" for="rez" />
