--- a/kadry/src/main/webapp/statystyka/index.xhtml
+++ b/kadry/src/main/webapp/statystyka/index.xhtml
@@ -28,7 +28,7 @@
                                      <p:submenu icon="pi pi-users" label="pracownicy" style="width: 150px">
                                          <p:menuitem icon="pi pi-ellipsis-v" value="lista wszystkich prac." style="width: 150px" action="Pracownikwykaz"/>
                                          <p:menuitem icon="pi pi-ellipsis-v" value="angaże w firmie bież." style="width: 150px" action="Pracownik"/>
-                                         <p:menuitem icon="pi pi-ellipsis-v" value="dane pracowników" style="width: 150px" action="Pracownikdane"/><p:menuitem icon="pi pi-ellipsis-v" value="grupy do list płac" style="width: 150px" action="Pracownikgrupy"/>
+                                         <p:menuitem icon="pi pi-ellipsis-v" value="dane pracowników" style="width: 150px" action="Pracownikdane"/><p:menuitem icon="pi pi-ellipsis-v" value="staż pracowników" style="width: 150px" action="Pracownikhistoria"/><p:menuitem icon="pi pi-ellipsis-v" value="grupy do list płac" style="width: 150px" action="Pracownikgrupy"/>
                                           <p:menuitem icon="pi pi-ellipsis-v" value="alerty - pracownicy" style="width: 150px" action="Pracownikalerty"/><p:menuitem icon="pi pi-ellipsis-v" value="aneksy do umów" style="width: 150px" action="Pracownikaneksy"/><p:menuitem icon="pi pi-ellipsis-v" value="lista aktywnych umów" style="width: 150px" action="Pracownikumowy"/><p:menuitem icon="pi pi-ellipsis-v" value="dni urlopów zatrud." style="width: 150px" action="Pracownikurlopy"/>
                                     </p:submenu>
                                     <p:menuitem icon="pi pi-file" value="umowy" style="width: 150px" action="Umowa"/>
