--- a/kadry/src/main/webapp/wskazniki/sub/soka.xhtml
+++ b/kadry/src/main/webapp/wskazniki/sub/soka.xhtml
@@ -23,7 +23,7 @@
                  <p:dataTable id="datalist" value="#{sokaView.lista}" var="items"
                                  rowIndexVar="index"
                                  rowKey="#{items.nazwiskoiimie}" sortBy="#{items.nazwiskoiimie}"
-                                 style="width: 800px;"
+                                 style="width: 840px;"
                                  emptyMessage="nie pobrano danych"
                                  >
                      <p:column width="150" headerText="nazwisko i imię" style="text-align: left;" groupRow="true">
@@ -43,6 +43,9 @@
                         </p:column>
                         <p:column width="40" headerText="liczba dni" style="text-align: center;">
                             <h:outputText value="#{items.dni}"/>
+                        </p:column>
+                      <p:column width="40" headerText="godziny" style="text-align: center;">
+                            <h:outputText value="#{items.godziny}"/>
                         </p:column>
                         <p:column width="40" headerText="kwota" style="text-align: right;"  groupRow="true">
                             <bcf:outputwal value="#{items.kwota}"/>
