--- a/kadry/src/main/webapp/admin/index.xhtml
+++ b/kadry/src/main/webapp/admin/index.xhtml
@@ -45,6 +45,7 @@
                                 <p:menuitem icon="pi pi-calendar" value="kalendarz pracownika" style="width: 150px" onclick="PF('dialogkalendarzmiesiac').show()" async="true"/>
                                 <!--                                <p:menuitem icon="pi pi-calendar" value="paski oddelegowanie" style="width: 150px" onclick="PF('dialogpaskioddeleowanie').show()" async="true"/>-->
                                 <p:menuitem icon="pi pi-calendar" value="oddelegowanie" style="width: 150px" onclick="PF('dialogoddelegowanie').show()" async="true"/>
+                                <p:menuitem icon="pi pi-calendar-minus" value="dane do Z3" style="width: 150px" onclick="PF('dialogdanez3').show()" async="true"/>
                             </p:submenu>
                             <p:submenu label="listy płac" style="width: 150px">
                                 <p:menuitem icon="pi pi-bars" value="lista rach. um. zleceń" style="width: 150px" onclick="PF('dialoglistarachunekzlecenia').show()" async="true"/>
@@ -244,6 +245,7 @@
                 <ui:include src="sub/dialog/dialog_zbiorcze_skladniki.xhtml"/>
                 <ui:include src="sub/dialog/dialog_nadgodziny_niemcy.xhtml"/>
                 <ui:include src="sub/dialog/dialog_komornik.xhtml"/>
+                <ui:include src="sub/dialog/dialog_danez3.xhtml"/>
                 <!--                <ui:include src="sub/dialog/dialog_paski_oddelegowanie.xhtml"/>-->
                 <h:form>
 <!--                         <p:commandButton value="rodzaj" styleClass="buttonnorm" actionListener="#{skladnikPotraceniaView.generujtabele()}" />-->
