--- a/npkpir_23/web/wspolny/sub/faktura/faktura_sporzadzone.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_sporzadzone.xhtml
@@ -89,11 +89,11 @@
                 </f:facet>
                 <p:ajax event="filter" global="false" />
 <!--                <p:ajax event="filter" global="false"  oncomplete="przeliczfiltersporzadzone()"/>-->
-                <p:ajax event="rowSelectCheckbox" listener="#{fakturaView.sumawartosciwybranych(fakturaView.gosciwybral)}" update="akordeon:formsporzadzone:dokumentyLista :akordeon:formsporzadzone:panelsum confirmDialog" global="false"/>
+<!--                <p:ajax event="rowSelectCheckbox" listener="#{fakturaView.sumawartosciwybranych(fakturaView.gosciwybral)}" update="akordeon:formsporzadzone:dokumentyLista :akordeon:formsporzadzone:panelsum confirmDialog" global="false"/>
                 <p:ajax event="rowUnselectCheckbox" listener="#{fakturaView.sumawartosciwybranych(fakturaView.gosciwybral)}" update="akordeon:formsporzadzone:dokumentyLista :akordeon:formsporzadzone:panelsum confirmDialog" global="false"/>
                 <p:ajax event="toggleSelect" listener="#{fakturaView.sumawartosciwybranych(fakturaView.gosciwybral)}" update="akordeon:formsporzadzone:dokumentyLista :akordeon:formsporzadzone:panelsum confirmDialog" global="false"/>      
                 <p:ajax event="rowSelect" listener="#{fakturaView.sumawartosciwybranych(fakturaView.gosciwybral)}" update="akordeon:formsporzadzone:dokumentyLista :akordeon:formsporzadzone:panelsum  confirmDialog" global="false"/>      
-                <p:ajax event="rowUnselect" listener="#{fakturaView.sumawartosciwybranych(fakturaView.gosciwybral)}"  update="akordeon:formsporzadzone:dokumentyLista :akordeon:formsporzadzone:panelsum  confirmDialog" global="false"/>      
+                <p:ajax event="rowUnselect" listener="#{fakturaView.sumawartosciwybranych(fakturaView.gosciwybral)}"  update="akordeon:formsporzadzone:dokumentyLista :akordeon:formsporzadzone:panelsum  confirmDialog" global="false"/>      -->
                 <p:column selectionMode="multiple"  width="30" style="text-align: center;" />
                 <p:column width="20">
                     <p:rowToggler />
