--- a/kadry/src/main/webapp/parametry/sub/edycjadanych_parametry.xhtml
+++ b/kadry/src/main/webapp/parametry/sub/edycjadanych_parametry.xhtml
@@ -153,7 +153,7 @@
                                  selectionMode="single" selection="#{rodzjawynagrodzeniaSetView.selectedlista}"
                                  rowKey="#{item11.id}" emptyMessage="Nie znaleziono takiego składnika"
                                  scrollable="true" scrollHeight="700" scrollRows="30" 
-                                 style="width: 1550px;" >
+                                 style="width: 1700px;" >
 
                         <p:column width="30" style="text-align: center;">
                             <f:facet name="header">
@@ -236,6 +236,24 @@
                                 <h:outputText value="do średniej urlopowej oddel"/>
                             </f:facet>
                             <p:selectBooleanCheckbox value="#{item11.sredniaurlopowaoddelegowanie}"/>
+                        </p:column>
+                        <p:column style="text-align: center;" width="50">
+                            <f:facet name="header">
+                                <h:outputText value="Z3 kol.1"/>
+                            </f:facet>
+                            <p:selectBooleanCheckbox value="#{item11.z31}"/>
+                        </p:column>
+                        <p:column style="text-align: center;" width="50">
+                            <f:facet name="header">
+                                <h:outputText value="Z3 kol.2"/>
+                            </f:facet>
+                            <p:selectBooleanCheckbox value="#{item11.z32}"/>
+                        </p:column>
+                        <p:column style="text-align: center;" width="50">
+                            <f:facet name="header">
+                                <h:outputText value="Z3 kol.3"/>
+                            </f:facet>
+                            <p:selectBooleanCheckbox value="#{item11.z33}"/>
                         </p:column>
 
                     </p:dataTable>
