--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_danez3.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_danez3.xhtml
@@ -9,8 +9,10 @@
     >
     <p:dialog id="dialogdanez3" header="Zestawienie danych do Z-3" widgetVar="dialogdanez3"  
               resizable="false"  onShow="ustawdialog('dialogdanez3','centertile',1650,800);" closeOnEscape="true" onHide="resetujdialog('dialogdanez3');" 
-              fitViewport="true">
+              fitViewport="true" >
         <p:ajax event="open" listener="#{z3daneView.init()}" update="KartyZ3Form" global="false"/>
+        <p:ajax event="close" listener="#{z3daneView.close()}" global="false"/>
+         <p:ajax event="open" listener="#{z3daneView.open()}" global="false"/>
         <p:outputPanel>
             <h:form  styleClass="formadmin" id="KartyZ3Form">
                 <p:panelGrid columns="1">
