--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac.xhtml
@@ -11,6 +11,8 @@
               resizable="false"  onShow="ustawdialog('dialoglistaplac','centertile',1650,820);" closeOnEscape="true" onHide="resetujdialog('dialoglistaplac');" 
               fitViewport="true">
         <p:ajax event="open" listener="#{pasekwynagrodzenView.init()}" update="DefinicjalistaplacCreateForm DefinicjalistaplacCreateForm1 KursDataLPForm DefinicjalistaplacCreateForm2 PasekwynagrodzenListForm" global="true"/>
+         <p:ajax event="close" listener="#{pasekwynagrodzenView.close()}" global="false"/>
+         <p:ajax event="open" listener="#{pasekwynagrodzenView.open()}" global="false"/>
         <p:panelGrid columns="2">
             <p:autoUpdate/>
             <h:outputText value="W przypadku braku osoby na zleceniu na liście proszę sprawdzić, czy wystawiono rachunek." style="color: #136e13;margin-top: 10px;"/>
